[package]
name = "egui-wine-test"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", features = ["opengl"] }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3", features = ["opengl"] }

[features]
default = ["opengl"]
opengl = []
